SO-3044: use recommended gc config in Tycho tests